tests/ui/impl-trait/opaque-cast-field-access-in-future.stderr
error[E0282]: type annotations needed
  --> $DIR/opaque-cast-field-access-in-future.rs:7:14
   |
LL |         &mut foo.bar;
   |              ^^^ cannot infer type

error[E0283]: type annotations needed
  --> $DIR/opaque-cast-field-access-in-future.rs:22:17
   |
LL | fn run() -> Foo<impl Future<Output = ()>> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Future`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
